@@ -1,3 +1,12 @@
+2009-05-13  Omair Majid  <omajid@redhat.com>
+
+	* rt/net/sourceforge/jnlp/JNLPSplashScreen.java: New file. This new class
+	is responsible for displaying the splash screen.
+	* rt/net/sourceforge/jnlp/Launcher.java (launchApplication): Show a splash
+	screen if specified in the JNLP file while loading the remote jars.
+	* rt/net/sourceforge/jnlp/cache/DefaultDownloadIndicator.java (getListener):
+	Reposition the frame at the bottom right corner of the screen.
+
 2009-05-13  Lillian Angel  <langel@redhat.com>
 
 	* patches/icedtea-liveconnect.patch: Re-added.
